# open_perception

./: .gitignore  .gitmodules  LICENSE  MANIFEST.in  README.md  o3d_gui_examples.py  pyproject.toml  test_cv.py  test_o3d_interface.py  test_rs.py  view_dataset.py
config/: api_interface.yaml  default.yaml  redis_interface.yaml  redis_interface_lookup.yaml  redis_to_gui.yaml  vlm.yaml
docs/: architecture.md  config_overview.md  possible_errors.md  setup.md
docs/assets/detections/: crop_images.py
docs/source/: conf.py  index.rst  modules.rst  open_perception.communication.camera.rst  open_perception.communication.rst  open_perception.logging.rst  open_perception.perception.rst  open_perception.pipeline.rst  open_perception.rst  open_perception.utils.rst
examples/: api_interface.ipynb  example_api_interface.py  example_lookup_model.py  example_redis_interface.py  redis_interface.ipynb  stand_alone.py  vlm_deambiguation.ipynb  vlm_search.ipynb
scripts/: download_checkpoints.sh  load_detections.py  test_grounding_dino.py  test_sam2realtime.py  update_docs.sh
src/: main.py
src/open_perception/: __init__.py
src/open_perception/communication/: api_client.py  api_interface.py  base_client.py  base_interface.py  drag_drop_loader.py  gui.py  gui_interface.py  gui_interface_o3d.py  logs_interface.py  o3d_interface_example.py  redis_client.py  redis_interface.py
src/open_perception/communication/camera/: realsense.py  utils.py
src/open_perception/feature_extraction/geometric/: pkg_test.py  primitives.py  ransac.py  regressor.py  test.py  utils.py
src/open_perception/logging/: base_logger.py  pdf_logger.py
src/open_perception/perception/: base_models.py  detection_models.py  segmentation_models.py  vlm_based_models.py
src/open_perception/pipeline/: element.py  orchestrator.py
src/open_perception/state_estimation/: base_state_estimator.py
src/open_perception/utils/: common.py  config_loader.py  tests.py  visualization.py  vlm.py
tests/: test_api_interface_and_client.py  test_detection_models.py  test_redis_interface_and_client.py  test_vlm_detection_models.py
